nuova API ricerca deleghe paginata e con filtri
